Fix GUI on iOS

--- a/frontend/src/assets/_layout.scss
+++ b/frontend/src/assets/_layout.scss
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   height: 100vh;
+  height: -webkit-fill-available;
   max-height: 100vh;
   overflow: hidden;
 }
